fix: dark mode for /note-map page

--- a/src/styles/graph.css
+++ b/src/styles/graph.css
@@ -2,7 +2,7 @@
 
 #graph-container {
   border: 1px solid #666;
-  background-color: #eee;
+  background-color: var(--card-color);
 }
 text {
   fill: var(--main-text-color);
