--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -3,7 +3,7 @@ body {
   --card-color: #eff7f0;
   --main-text-color: #333;
   --navbar-bg-color: #eff7f0;
-  --link-color: #0a0a0a;
+  --link-color: #818181;
 }
 
 body.dark {
